--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -34,6 +34,7 @@ body {
   /* position: relative; */
   background-color: rgba(255, 255, 255);
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .display-screen {
